add Order and EmailService

--- a/ProniaBackEnd/appsettings.json
+++ b/ProniaBackEnd/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Email": {
+    "LoginEmail": "rashadbeatz808@gmail.com",
+    "Password": "xogtcvmbhxfyvqto",
+    "Host": "smtp.gmail.com",
+    "Port": "587"
+  },
   "AllowedHosts": "*"
 }
